; ModuleID = '/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv_loop_delete.c'
source_filename = "/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv_loop_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@default_loop_ptr = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uv_loop_delete(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** @default_loop_ptr, align 8
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @uv_loop_close(i32* %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp eq i32 %9, 0
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load i32*, i32** %2, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = icmp ne i32* %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %1
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @uv__free(i32* %17)
  br label %19

19:                                               ; preds = %16, %1
  ret void
}

declare dso_local i32 @uv_loop_close(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @uv__free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
